[gd_scene load_steps=3 format=3 uid="uid://y8sa4bygelho"]

[ext_resource type="Theme" path="res://themes/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/screens/StageSelectScreen.gd" id="2"]

[node name="StageSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Header" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="TopBar" type="HBoxContainer" parent="Header"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="BackButton" type="Button" parent="Header/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(100, 50)
text = "← Back"

[node name="Spacer" type="Control" parent="Header/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Header"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 32
text = "⚽ Stage Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="Header"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
theme_override_font_sizes/font_size = 18
text = "Progress: 0/350 (0.0%)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0625
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="StageList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomPadding" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
